test post layout

--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 title: Cole Strickler
 logo: /assets/img/logo.png
-description: Minimal is a theme for GitHub Pages.
+description: systems, hardware, and books
 show_downloads: true
 google_analytics:
 theme: jekyll-theme-minimal
