--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 title: Cole Strickler
 logo: /assets/img/logo.png
-description: systems, hardware, and books
+description: systems and hardware
 show_downloads: true
 google_analytics:
 theme: jekyll-theme-minimal
